--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 # 환경설정
 env:
-  DOCKER_IMAGE: ghcr.io/${{ github.actor }}/chatbot-test:latest
+  DOCKER_IMAGE: ghcr.io/zlcls456/chatbot-test:latest
   VERSION: ${{ github.sha }}
   NAME: go_cicd
 
@@ -43,7 +43,7 @@ jobs:
         with:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ${{ env.DOCKER_IMAGE }}
+          tags: ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
   # 배포 Job
   deploy:
     needs: build  # build 후에 실행되도록 정의
@@ -59,5 +59,5 @@ jobs:
       # 8080 -> 80 포트로 수행하도록 지정
       - name: Docker run
         run: |
-          docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}
-          docker run -d -p 80:8080 --name go_cicd --restart always ${{ env.DOCKER_IMAGE }}
+          docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
+          docker run -d -p 80:8080 --name go_cicd --restart always ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
