--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # github repository에서 checkout
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+
+#      # java set up
+#      - name: Setup Java
+#        uses: actions/setup-java@v2
+#        with:
+#          java-version: '17'
+#
+#      # java gradle build
+#      - name: Build with Gradle
+#        run: ./gradlew build
+#
       # docker build 수행
       - name: Set up docker buildx
         id: buildx
