add deploy script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,13 +37,21 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean build
 
-      # 디렉토리 생성
+    # 디렉토리 생성
     - name: Make Directory
       run: mkdir -p deploy
 
-      # Jar 파일 복사
+    # Jar 파일 복사
     - name: Copy Jar
       run: cp ./build/libs/*.jar ./deploy
+
+    # appspec.yml 파일 복사
+    - name: Copy appspec.yml
+      run: cp appspec.yml ./deploy
+
+    # script files 복사
+    - name: Copy script
+      run: cp ./scripts/*.sh ./deploy
 
     - name: Make zip file
       run: zip -r ./chatbot-test.zip ./deploy
@@ -58,3 +66,16 @@ jobs:
 
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./chatbot-test.zip s3://mychatbotcicdtest/
+
+    # Deploy
+    - name: Deploy
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        aws deploy create-deployment \
+        --application-name chatbot-test \
+        --deployment-group-name chatbot-group \
+        --file-exists-behavior OVERWRITE \
+        --s3-location bucket=mychatbotcicdtest,bundleType=zip,key=chatbot-test.zip \ 
+        --region ap-northeast-2
