--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/javax.inject/javax.inject
     implementation 'javax.inject:javax.inject:1'
+    implementation 'org.json:json:20220924'
 
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
