--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
     implementation 'org.json:json:20220924'
 
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
